Support a TOML configuration file
The new config file currently only configures the same options that were
already available through environment variables. However I have ideas
for additional features that would be much nicer to support using a
structured configuration format like TOML rather than environment
variables, so config files exist now!

The previous environment variables are still supported and will be used
if you don't have a config file. I plan to keep supporting the MPD_HOST
and MPD_PORT environment variables forever since they're shared with
other MPD clients such as mpc, but I may eventually drop the environment
variables specific to mpd-now-playable in a future release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "attrs>=23.1.0",
     "pyobjc-framework-MediaPlayer>=10.0",
     "python-mpd2>=3.1.0",
+    "xdg-base-dirs>=6.0.1",
+    "pytomlpp>=1.0.13",
+    "apischema>=0.18.1",
+    "yarl>=1.9.4",
 ]
 readme = "README.md"
 
