--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ ipython_config.py
 .pdm.toml
 .pdm-python
 .pdm-build/
+__version__.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
