--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pytomlpp>=1.0.13",
     "apischema>=0.18.1",
     "yarl>=1.9.4",
+    "boltons>=24.0.0",
 ]
 readme = "README.md"
 
