Significantly overhaul configuration management
Everything now uses bog-standard Python dataclasses, with Pydantic
providing validation and type conversion through separate classes using
its type adapter feature. It's also possible to define your classes
using Pydantic's own model type directly, making the type adapter
unnecessary, but I didn't want to do things that way because no actual
validation is needed when constructing a Song instance for example.
Having Pydantic do its thing only on-demand was preferable.

I tried a number of validation libraries before settling on Pydantic for
this. It's not the fastest option out there (msgspec is I think), but it
makes adding support for third-party types like yarl.URL really easy, it
generates a nice clean JSON Schema which is easy enough to adjust to my
requirements through its GenerateJsonSchema hooks, and raw speed isn't
all that important anyway since this is a single-user desktop program
that reads its configuration file once on startup.

Also, MessagePack is now mandatory if you're caching to an external
service. It just didn't make a whole lot sense to explicitly install
mpd-now-playable's Redis or Memcached support and then use pickling with
them.

With all this fussing around done, I'm probably finally ready to
actually use that configuration file to configure new features! Yay!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ dependencies = [
     "python-mpd2>=3.1.0",
     "xdg-base-dirs>=6.0.1",
     "pytomlpp>=1.0.13",
-    "apischema>=0.18.1",
     "yarl>=1.9.4",
     "boltons>=24.0.0",
+    "pydantic>=2.7.4",
+    "rich>=13.7.1",
 ]
 readme = "README.md"
 
@@ -29,14 +30,9 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-redis = ["aiocache[redis]"]
-memcached = ["aiocache[memcached]"]
-msgpack = [
-    "ormsgpack>=1.5.0",
-]
-all = [
-    "mpd-now-playable[redis,memcached,msgpack]",
-]
+redis = ["aiocache[redis]", "ormsgpack>=1.5.0"]
+memcached = ["aiocache[memcached]", "ormsgpack>=1.5.0"]
+all = ["mpd-now-playable[redis,memcached]"]
 
 [project.urls]
 Homepage = "https://git.00dani.me/00dani/mpd-now-playable"
@@ -51,6 +47,7 @@ build-backend = "pdm.backend"
 
 [tool.mypy]
 mypy_path = 'stubs'
+plugins = ['pydantic.mypy', 'mpd_now_playable.tools.schema.plugin']
 
 [tool.ruff.lint]
 select = [
