Add descriptions to websockets config

--- a/schemata/config-v1.json
+++ b/schemata/config-v1.json
@@ -59,6 +59,7 @@
 							"type": "array"
 						}
 					],
+					"description": "The hostname you'd like your WebSockets server to listen on. In most cases the default behaviour, which binds to all network interfaces, will be fine.",
 					"title": "Host"
 				},
 				"kind": {
@@ -71,6 +72,7 @@
 					"type": "string"
 				},
 				"port": {
+					"description": "The TCP port you'd like your WebSockets server to listen on. Should generally be higher than 1024, since mpd-now-playable doesn't normally run with the privilege to bind to low-numbered ports.",
 					"maximum": 65535,
 					"minimum": 1,
 					"title": "Port",
