--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ build-backend = "pdm.backend"
 [tool.mypy]
 mypy_path = 'stubs'
 plugins = ['pydantic.mypy', 'mpd_now_playable.tools.schema.plugin']
+enable_incomplete_feature = 'NewGenericSyntax'
 
 [tool.ruff.lint]
 select = [
@@ -104,7 +105,7 @@ excludes = ["**/.mypy_cache"]
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "mypy>=1.7.1",
+    "mypy>=1.11.0",
     "ruff>=0.1.6",
     "class-doc>=0.2.6",
 ]
